# ESP-IDF

LIBS/analogExpand/: analogExpand.c
LIBS/ds3231/: ds3231.c
LIBS/encoder/: encoder.h
LIBS/fontx/: fontx.c  fontx.h
LIBS/matrix/: matrix.h
LIBS/matrixGUI/: matrixGUI.c
LIBS/mcp23s17/: mcp23s17.c  mcp23s17.h
LIBS/st7789Matrix/: st7789Matrix.c  st7789Matrix.h
PROJECTS/SHC/: CMakeLists.txt  Makefile  sdkconfig  sdkconfig.old  workspace.code-workspace
PROJECTS/SHC/data/: EU_RU_32p_LATIN.FNT
PROJECTS/SHC/main/: CMakeLists.txt  GUI.c  GUI.h  analogExpand.h  ds3231.h  encoder.c  events.c  events.h  header.h  main.c  matrix.c  matrixGUI.h  st7789.c  st7789.h
