idf_component_register(SRCS 
                    "main.c"
                    "st7789.c"
                    "fontx.c"
                    "matrix.c"
                    "st7789Matrix.c"
                    "GUI.c"
                    "matrixGUI.c"
                    "encoder.c"
                    "events.c"
                    "ds3231.c"
                    "analogExpand.c"

                   
                    INCLUDE_DIRS ".")
